// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Error Snapshot Tests > matches snapshot for basic error message 1`] = `
<div
  class="alert alert-danger d-flex align-items-center"
  data-qa="test-error-basic"
  role="alert"
>
  <svg
    aria-label="Error:"
    class="bi flex-shrink-0 me-2"
    height="20"
    role="img"
    width="20"
  >
    <use
      href="#exclamation-triangle-fill"
    />
  </svg>
  <div
    class="flex-grow-1"
    data-qa="test-error-basic-message"
  >
    Something went wrong
  </div>
  <svg
    style="display: none;"
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      fill="currentColor"
      id="exclamation-triangle-fill"
      viewBox="0 0 16 16"
    >
      <path
        d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
      />
    </symbol>
  </svg>
</div>
`;

exports[`Error Snapshot Tests > matches snapshot for error with retry button 1`] = `
<div
  class="alert alert-danger d-flex align-items-center"
  data-qa="test-error-retry"
  role="alert"
>
  <svg
    aria-label="Error:"
    class="bi flex-shrink-0 me-2"
    height="20"
    role="img"
    width="20"
  >
    <use
      href="#exclamation-triangle-fill"
    />
  </svg>
  <div
    class="flex-grow-1"
    data-qa="test-error-retry-message"
  >
    Failed to load data
  </div>
  <button
    class="btn btn-sm btn-outline-danger ms-3"
    data-qa="test-error-retry-retry"
    type="button"
  >
    Retry
  </button>
  <svg
    style="display: none;"
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      fill="currentColor"
      id="exclamation-triangle-fill"
      viewBox="0 0 16 16"
    >
      <path
        d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
      />
    </symbol>
  </svg>
</div>
`;

exports[`Error Snapshot Tests > matches snapshot for long error message 1`] = `
<div
  class="alert alert-danger d-flex align-items-center"
  data-qa="test-error-long"
  role="alert"
>
  <svg
    aria-label="Error:"
    class="bi flex-shrink-0 me-2"
    height="20"
    role="img"
    width="20"
  >
    <use
      href="#exclamation-triangle-fill"
    />
  </svg>
  <div
    class="flex-grow-1"
    data-qa="test-error-long-message"
  >
    This is a very long error message that might wrap to multiple lines and should be displayed correctly in the error component
  </div>
  <svg
    style="display: none;"
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      fill="currentColor"
      id="exclamation-triangle-fill"
      viewBox="0 0 16 16"
    >
      <path
        d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
      />
    </symbol>
  </svg>
</div>
`;

exports[`Error Snapshot Tests > matches snapshot for short error message 1`] = `
<div
  class="alert alert-danger d-flex align-items-center"
  data-qa="test-error-short"
  role="alert"
>
  <svg
    aria-label="Error:"
    class="bi flex-shrink-0 me-2"
    height="20"
    role="img"
    width="20"
  >
    <use
      href="#exclamation-triangle-fill"
    />
  </svg>
  <div
    class="flex-grow-1"
    data-qa="test-error-short-message"
  >
    Error
  </div>
  <svg
    style="display: none;"
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      fill="currentColor"
      id="exclamation-triangle-fill"
      viewBox="0 0 16 16"
    >
      <path
        d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
      />
    </symbol>
  </svg>
</div>
`;
